# ai-agent-lab

./: .gitignore  README.md  pyproject.toml  utils.py
autogen_project/: README.md  autogen_main.py
conf/: configs.py
langgraph_project/: appendix.py  langgraph_basics.py  single_agent.py  tools.py  utils.py
langgraph_project/agents_nodes/: agent_factory.py  custom_nodes.py
langgraph_project/experiments/: pandas_agent.py  text_to_sql.py  vison_models.py
langgraph_project/multi_agents/: AgentState.py  multi_agents.py  multi_agents_base.py  multi_agents_example.py  temp_helpers.py
langgraph_project/multi_agents/article_researcher/: appendix.py  researchers_agent_base.py  researchers_custom_tools.py  researchers_dynamic_tool_reg.py  researchers_sub_goals.py
langgraph_project/multi_agents/refactoring_agent/: appendix.py  demo_file.py  refact_agent_base.py
langgraph_project/tools/: tools.py
prompts/: multiagents_prompts.py  pre_subfixes.py
templates/: refactor_prompt.j2
tests/: test_nodes.py
